@startuml state-diagram

hide empty description

[*] -r-> ManualDriving

state "Manual Driving" as ManualDriving
ManualDriving -r-> CruiseControl : cruise control button pressed

state "Advanced Cruise Control" as CruiseControl {
    [*] --> LaneKeeping
    state "Lane Keeping" as LaneKeeping {
        [*] -> NoInattentionDetected

        state "No Inattention Detected" as NoInattentionDetected
        NoInattentionDetected -> InattentionDetected : inattention detected for 2 seconds

        state "Inattention Detected" as InattentionDetected {
            InattentionDetected : after 8 seconds / activate sound noise
            InattentionDetected : exit / deactivate sound noise
        }
        InattentionDetected -> NoInattentionDetected : no inattention detected for 2 seconds
        InattentionDetected -r-> PullOverPrep : after 18 seconds

        state "Pull Over Preparation" as PullOverPrep {
            PullOverPrep : entry / activate turn signals
            PullOverPrep : do / slow down to a minimum of 50 km/h
            PullOverPrep : do / check pull over safety
            PullOverPrep : do / inform driver about imminent pull over (dashboard)
        }
        PullOverPrep --> PullingOver : pulling over is safe
    }

    state "Pulling Over" as PullingOver {
        [*] -> EmergencyLaneNotReached
        state "Emergency Lane Not Reached" as EmergencyLaneNotReached
        EmergencyLaneNotReached : do / slow down to a minimum of 10 km/h
        EmergencyLaneNotReached : do / pull over to the emergency lane

        EmergencyLaneNotReached --> EmergencyLaneReached : emergency lane reached

        state "Emergency Lane Reached" as EmergencyLaneReached
        EmergencyLaneReached --> Stopped : [speed == 0]
        EmergencyLaneReached : do / slow down
    }

    state Stopped {
        Stopped : entry / activate emergency signals
        Stopped : exit / deactivate emergency signals
    }
}
CruiseControl -l-> ManualDriving : manual driving button pressed
CruiseControl : exit / deactivate turn signals

@enduml
